[tool.poetry]
name = "caujax"
version = "0.1.0"
description = "Causal Jax"
authors = ["Jeong-Yoon Lee <jeongyoon.lee1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
